# Delivery-ETA-Prediction

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
config/: prometheus.yml  settings.py
config/grafana/provisioning/datasources/: datasources.yml
scripts/: init_db.sql
src/api/: main.py
src/data/: clean.py  features.py  generate.py  ingest.py
src/models/: evaluate.py  train.py
src/monitoring/: drift.py  metrics.py
tests/: load_test.py  test_api.py  test_features.py
