[tool.poetry]
name = "delivery-eta"
version = "1.0.0"
description = "Production-grade Delivery ETA Prediction System with real-time ML inference"
authors = ["ML Engineering Team <ml-team@company.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"

# Core data processing
numpy = "^1.24.0"
pandas = "^2.0.0"

# Database and API clients
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.0"
httpx = "^0.24.0"
requests = "^2.31.0"
googlemaps = "^4.10.0"

# Geospatial processing
geopy = "^2.3.0"

# Visualization
matplotlib = "^3.7.0"
seaborn = "^0.12.0"
plotly = "^5.15.0"

# ML and preprocessing
scikit-learn = "^1.3.0"
lightgbm = "^4.0.0"
xgboost = "^1.7.0"
optuna = "^3.3.0"

# MLOps and experiment tracking
mlflow = "^2.7.0"

# Model serialization
joblib = "^1.3.0"

# API serving
fastapi = "^0.103.0"
uvicorn = {extras = ["standard"], version = "^0.23.0"}
pydantic = "^2.4.0"
pydantic-settings = "^2.0.0"

# Caching
redis = "^4.6.0"

# Orchestration (optional)
prefect = "^2.13.0"

# Monitoring
evidently = "^0.4.0"
prometheus-client = "^0.17.0"

# Utilities
python-dotenv = "^1.0.0"
click = "^8.1.0"
loguru = "^0.7.0"
tenacity = "^8.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
locust = "^2.16.0"
black = "^23.9.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.5.0"
httpx = "^0.24.0"

[tool.poetry.scripts]
train = "src.models.train:main"
serve = "src.api.main:run_server"
generate-data = "src.data.generate:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=src --cov-report=term-missing"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
